--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Perl extension Devel::DumpTHX
+Revision history for Perl extension Devel::THXUtil
 
 0.01    Fri Mar 13 13:59:39 2009
         - original version
